[gd_scene load_steps=6 format=3 uid="uid://dn0lguw0e2u76"]

[ext_resource type="Script" path="res://scripts/dnd_stats.gd" id="1_7yq7w"]
[ext_resource type="PackedScene" uid="uid://bsuo0mm2hbn2j" path="res://scenes/dice_button.tscn" id="2_ocnkr"]
[ext_resource type="PackedScene" uid="uid://bc4m8kocilmc4" path="res://scenes/roll_button.tscn" id="3_r0xuk"]

[sub_resource type="FontFile" id="FontFile_wu2na"]
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/72/0/ascent = 0.0
cache/0/72/0/descent = 0.0
cache/0/72/0/underline_position = 0.0
cache/0/72/0/underline_thickness = 0.0
cache/0/72/0/scale = 1.0
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_qgf4s"]
font_size = 60

[node name="DNDStats" type="Node2D"]
position = Vector2(512, 2400)
script = ExtResource("1_7yq7w")
dnd_stats = ExtResource("1_7yq7w")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -400.0
offset_top = 100.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
theme_override_constants/separation = 30
alignment = 1

[node name="OptionButton" type="OptionButton" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = SubResource("FontFile_wu2na")
theme_override_font_sizes/font_size = 72
alignment = 1
text_overrun_behavior = 2
selected = 2
allow_reselect = true
item_count = 25
popup/item_1/text = "Сила"
popup/item_1/id = 1
popup/item_2/text = "Ловкость"
popup/item_2/id = 2
popup/item_3/text = "Выносливость"
popup/item_3/id = 3
popup/item_4/text = "Интеллект"
popup/item_4/id = 4
popup/item_5/text = "Мудрость"
popup/item_5/id = 5
popup/item_6/text = "Харизма"
popup/item_6/id = 6
popup/item_7/text = "Акробатика"
popup/item_7/id = 7
popup/item_8/text = "Атлетика"
popup/item_8/id = 8
popup/item_9/text = "Внимание"
popup/item_9/id = 9
popup/item_10/text = "Выживание"
popup/item_10/id = 10
popup/item_11/text = "Дрессировка"
popup/item_11/id = 11
popup/item_12/text = "Запугивание"
popup/item_12/id = 12
popup/item_13/text = "Исполнение"
popup/item_13/id = 13
popup/item_14/text = "История"
popup/item_14/id = 14
popup/item_15/text = "Ловкость рук"
popup/item_15/id = 15
popup/item_16/text = "Магия"
popup/item_16/id = 16
popup/item_17/text = "Медицина"
popup/item_17/id = 17
popup/item_18/text = "Обман"
popup/item_18/id = 18
popup/item_19/text = "Природа"
popup/item_19/id = 19
popup/item_20/text = "Проницательность"
popup/item_20/id = 20
popup/item_21/text = "Расследование"
popup/item_21/id = 21
popup/item_22/text = "Религия"
popup/item_22/id = 22
popup/item_23/text = "Скрытность"
popup/item_23/id = 23
popup/item_24/text = "Убеждение"
popup/item_24/id = 24

[node name="StatValue" type="HBoxContainer" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2

[node name="StatValue" type="Label" parent="CanvasLayer/VBoxContainer2/StatValue"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Значение"
label_settings = SubResource("LabelSettings_qgf4s")

[node name="StatValueEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer2/StatValue"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60

[node name="BonusValue" type="HBoxContainer" parent="CanvasLayer/VBoxContainer2"]
layout_mode = 2

[node name="BonusValue" type="Label" parent="CanvasLayer/VBoxContainer2/BonusValue"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
text = "Бонус умения"
label_settings = SubResource("LabelSettings_qgf4s")

[node name="BonusValueEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer2/BonusValue"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 60

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -220.0
offset_top = -400.0
offset_right = 221.0
offset_bottom = -116.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 70
alignment = 1

[node name="DND4" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_ocnkr")]
position = Vector2(220, -1050)
scale = Vector2(0.8, 0.8)

[node name="DND6" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_ocnkr")]
position = Vector2(220, -900)
scale = Vector2(0.8, 0.8)

[node name="DND8" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_ocnkr")]
position = Vector2(220, -750)
scale = Vector2(0.8, 0.8)

[node name="DND10" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_ocnkr")]
position = Vector2(220, -600)
scale = Vector2(0.8, 0.8)

[node name="DND10p" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_ocnkr")]
position = Vector2(220, -450)
scale = Vector2(0.8, 0.8)

[node name="DND12" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_ocnkr")]
position = Vector2(220, -300)
scale = Vector2(0.8, 0.8)

[node name="DND20" parent="CanvasLayer/VBoxContainer" instance=ExtResource("2_ocnkr")]
position = Vector2(220, -150)
scale = Vector2(0.8, 0.8)

[node name="RollButton" parent="CanvasLayer/VBoxContainer" instance=ExtResource("3_r0xuk")]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 72
text = "Return"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/RollButton" to="." method="_on_roll_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
